fixed text-truncate and text-break for tables

--- a/src/less/components/text.less
+++ b/src/less/components/text.less
@@ -148,28 +148,49 @@
 .uk-text-nowrap { white-space: nowrap; }
 
 /*
- * Prevent text from wrapping onto multiple lines, and truncate with an ellipsis
- * 1. Ensure that the node has a maximum width after which truncation can occur
+ * 1. Make sure a max-width is set after which truncation can occur
+ * 2. Prevent text from wrapping onto multiple lines, and truncate with an ellipsis
+ * 3. Fix for table cells
  */
 
 .uk-text-truncate {
-    max-width: 100%; /* 1 */
+    /* 1 */
+    max-width: 100%;
+    /* 2 */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
+/* 2 */
+th.uk-text-truncate,
+td.uk-text-truncate { max-width: 0; }
+
+
 /*
- * Break strings if their length exceeds the width of their container
+ * 1. Wrap long words onto the next line and break them if they are too long to fit
+ * 2. Legacy `word-wrap` as fallback for `overflow-wrap`
+ * 3. Add a hyphen where the word breaks
+ * 4. Fix `overflow-wrap` which doesn't work with table cells in Chrome, Opera, IE11 and Edge
+ *    Must use `break-all` to support IE11 and Edge
  */
 
 .uk-text-break {
+    /* 1 */
+    overflow-wrap: break-word;
+    /* 2 */
     word-wrap: break-word;
+    /* 3 */
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto;
 }
+
+/* 4 */
+th.uk-text-break,
+td.uk-text-break { word-break: break-all; }
+
 
 
 // Hooks
